[package]
name = "custom_codes"
version = "1.0.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Simple uniform response and error codes backed by enums"
homepage = "https://github.com/charleschege/custom_codes"
repository = "https://github.com/charleschege/custom_codes"
license = "MIT/Apache-2.0"


[dependencies]
serde = "1.0.94"
serde_derive = "1.0.94"
